Fix TODOs